got router working like i want

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -11,12 +11,12 @@
     border: 1px solid gray;
     box-shadow: 2px 2px 2px black;
     margin: 100px auto;
-    padding: 15px 0px;
+    padding: 15px 0px 15px 5px;
 }
 
 .input-wrapper{
     width: 280px;
-    margin: 5px auto;
+    margin: 0px auto;
 }
 
 .input-wrapper input{
@@ -25,6 +25,10 @@
     padding-left: 5px;
 }
 
-
+.error-message{
+    color: red;
+    font-size: 12px;
+    margin: 5px 0px;
+}
 
 
