--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,30 @@
   position: relative;
 }
 
+.header-text{
+  height: 100%;
+  min-width: 100px;
+  padding-top: 20px;
+  position: absolute;
+  left: 20px;
+}
+
+.white-text{
+  color: white;
+}
+
+.red-text{
+  color: red;
+}
+
+.black-text{
+  color: black;
+}
+
+.green-text{
+  color: green;
+}
+
+.blue-text{
+  color: blue;
+}
