--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,15 @@
     position: relative;
 }
 
+.header-text{
+  height: 100%;
+  min-width: 100px;
+  padding-top: 22px;
+  position: absolute;
+  left: 20px;
+  font-size: 13px;
+}
+
 .nav-list{
     height: 100%;
     display: flex;
@@ -23,6 +32,7 @@
     text-align: center;
     padding-top: 20px;
     cursor: pointer;
+    margin-right: 20px;
 }
 
 .nav-list a{
