--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,13 @@ input{
     margin: 5px 0px;
 }
 
-
+.close-x {
+  width: 20px;
+  height: 20px;
+  font-size: 18px;
+  position: absolute;
+  top: 10px;
+  right: 7px;
+  cursor: pointer;
+}
 
